SERVER-20531 uassert rather than invariant if findAndModify fails due to missing entries in the _id index